# ai-soccer-forecast

./: AGENTS.md  README.md  evaluation-claude.txt  evaluation-codex.txt  evaluation-gemini.txt  evaluation-grok.txt
gemma4-12bmlx-local-codex/: .env.example  Makefile  codex-output.txt  fix_run_agent.py  pyproject.toml  run_agent.py
gemma4-12bmlx-local-codex/src/soccer/: run_validation.py
gemma4-12bmlx-local-codex/tests/evaluation/: backtest.py
glm4.7-cloud-claude/: .gitignore  pyproject.toml
glm4.7-cloud-claude/data/: worldcup-2026.json
glm4.7-cloud-claude/predictions/: Argentina-vs-France.json  South Africa-vs-Canada.json  worldcup-2026-knockout-bracket.json  worldcup-2026-knockout-bracket.md  worldcup-2026-predictions-after1st-group.json  worldcup-2026-predictions-after1st-group.md
glm4.7-cloud-claude/predictions/bracket-cards/: 3rd-1-Brazil-vs-Portugal.json  Final-1-France-vs-England.json  QF-1-Brazil-vs-Netherlands.json  QF-2-Germany-vs-France.json  QF-3-Argentina-vs-England.json  QF-4-Portugal-vs-Spain.json  R16-1-Canada-vs-Brazil.json  R16-2-Netherlands-vs-USA.json  R16-3-Ivory Coast-vs-Germany.json  R16-4-France-vs-Egypt.json  R16-5-Argentina-vs-Mexico.json  R16-6-England-vs-Belgium.json  R16-7-Portugal-vs-Colombia.json  R16-8-Spain-vs-Switzerland.json  R32-1-South Africa-vs-Canada.json  R32-10-Mexico-vs-Ecuador.json  R32-11-England-vs-Congo DR.json  R32-12-Belgium-vs-Senegal.json  R32-13-Portugal-vs-Croatia.json  R32-14-Colombia-vs-Ghana.json  R32-15-Spain-vs-Austria.json  R32-16-Switzerland-vs-Algeria.json  R32-2-Brazil-vs-Japan.json  R32-3-Netherlands-vs-Morocco.json  R32-4-USA-vs-Bosnia & Herzegovina.json  R32-5-Ivory Coast-vs-Norway.json  R32-6-Germany-vs-Paraguay.json  R32-7-France-vs-Sweden.json  R32-8-Australia-vs-Egypt.json  R32-9-Argentina-vs-Cape Verde Islands.json  SF-1-Brazil-vs-France.json  SF-2-England-vs-Portugal.json
glm4.7-cloud-claude/soccer_agent/: __init__.py
glm4.7-cloud-claude/soccer_agent/worldcup/: __init__.py  __main__.py  bracket.py  card.py  cardpdf.py  cli.py  dataset.py  entities.py  forecast.py  form.py  lineup.py  live.py  predict.py  (+4 more)
glm4.7-cloud-claude/tests/: test_worldcup_bracket.py  test_worldcup_card.py  test_worldcup_cli.py  test_worldcup_dataset.py  test_worldcup_entities.py  test_worldcup_forecast.py  test_worldcup_form.py  test_worldcup_lineup.py  test_worldcup_live.py  test_worldcup_predict.py  test_worldcup_ranking.py  test_worldcup_reference.py
gpt5.5-cloud-codex/: .gitignore  Makefile  README.md  codex-output.txt  pyproject.toml
gpt5.5-cloud-codex/docs/: architecture.md  world-cup-2026.md
gpt5.5-cloud-codex/perdictions/: group_stage_predictions.md  worldcup-2026-predictions-after1st-group.md
gpt5.5-cloud-codex/predictions/: group_stage_predictions.json  worldcup-2026-elimination-stage-predictions.json  worldcup-2026-elimination-stage-predictions.md  worldcup-2026-full-elimination-bracket-predictions.json  worldcup-2026-full-elimination-bracket-predictions.md  worldcup-2026-predictions-after1st-group.json
gpt5.5-cloud-codex/tests/: test_agent.py  test_api_football.py  test_competitions.py  test_evaluation.py  test_live_world_cup.py  test_live_world_cup_loader.py  test_storage.py  test_world_cup_2026.py
minimax-m3-cloud-hermes/: .gitignore  README.md  hermes-output.txt  pyproject.toml
minimax-m3-cloud-hermes/data/: calib_clean.json  calib_noisy.json  ingested_cases.txt
minimax-m3-cloud-hermes/docs/: calibration.md  calibration_scale.md  dashboard.md  elo.md  odds-api.md  ollama-setup.md  phase2_future_work.md  prompt-iteration.md
minimax-m3-cloud-hermes/scripts/: _append_ingested.py  _run_eval_100.py  build_elo_state.py  e2e_api.sh  e2e_smoke.sh  ingest_football_data.py  ollama_serve.sh  prompt_iterate.py  serve_dashboard.sh
minimax-m3-cloud-hermes/tests/: test_agent.py  test_agent_elo.py  test_api.py  test_build_elo_state.py  test_calibration.py  test_calibration_store.py  test_cli.py  test_dashboard.py  test_dataset.py  test_db.py  test_elo.py  test_elo_integration.py  test_eval_calibration.py  test_factory_noise.py  test_fixtures.py  test_form_recent.py  test_harness.py  test_llm_reasoner.py  test_metrics.py  test_models.py  test_numeric_reasoner.py  test_odds_api.py  test_odds_live.py  test_ollama_live.py  test_prompt_sweep.py  test_registry.py  test_self_eval.py  test_tools_other.py
opus4.8-cloud-claude/: .coverage  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  claude-output.txt  pyproject.toml
opus4.8-cloud-claude/docs/: architecture.md
opus4.8-cloud-claude/fixtures/: ucl-2025-26.json  wc-2026-final.json
opus4.8-cloud-claude/perdictions/: worldcup-2026-predictions-after1st-group.md
opus4.8-cloud-claude/prediction/: Algeria-vs-Austria.json  CapeVerdeIslands-vs-SaudiArabia.json  Colombia-vs-Portugal.json  CongoDr-vs-Uzbekistan.json  Croatia-vs-Ghana.json  Curacao-vs-IvoryCoast.json  CzechRepublic-vs-Mexico.json  Ecuador-vs-Germany.json  Egypt-vs-Iran.json  Japan-vs-Sweden.json  Jordan-vs-Argentina.json  NewZealand-vs-Belgium.json  Norway-vs-France.json  Panama-vs-England.json  Senegal-vs-Iraq.json  SouthAfrica-vs-SouthKorea.json  Tunisia-vs-Netherlands.json  Uruguay-vs-Spain.json  worldcup-2026-knockout.json  worldcup-2026-knockout.md  worldcup-2026-predictions.json  worldcup-2026-predictions.md
opus4.8-cloud-claude/predictions/: worldcup-2026-predictions-after1st-group.json
opus4.8-cloud-claude/tests/: test_agent.py  test_cli.py  test_config.py  test_dossier.py  test_evaluation.py  test_harness.py  test_models_dossier.py  test_models_lifecycle.py  test_models_probs.py  test_registry.py  test_scenarios.py  test_settle.py  test_store.py
(+200 files in other folders)
