[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soccer-forecast"
version = "0.1.0"
description = "A multi-tool soccer prediction agent template."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
soccer-forecast = "soccer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/soccer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["soccer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
