[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-agent"
version = "0.1.0"
description = "Multi-tool agent for soccer match prediction with eval harness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hermes Agent" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.3",
]

[project.scripts]
soccer-agent = "soccer_agent.api.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "ollama: tests that hit a live ollama daemon (skipped if daemon unreachable)",
    "slow: tests that take >10s on a CPU-only sandbox (skipped by default with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
