[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer"
version = "0.1.0"
description = "Multi-tool soccer match-prediction agent"
requires-python = ">=3.11"
# certifi supplies the CA bundle for TLS verification in the API-Football client
# (the only networked path). The offline pipeline imports it lazily and degrades to the
# stdlib default context if it is absent.
dependencies = ["certifi>=2024.2.2"]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10", "pytest>=8", "pytest-cov>=5", "pre-commit>=3"]

[project.scripts]
soccer = "soccer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["soccer"]
branch = true
